--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,11 @@
   <head>
     <meta charset="utf-8">
     <title>{{page.title}}</title>
+    <style media="screen">
+      body {
+        font-family: "Segoe UI"
+      }
+    </style>
   </head>
   <body>
     <main>
